Fix nav highlighting. Fix header width so long titles don't wrap.

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -24,6 +24,8 @@ body {
   width: 100%;
 }
 
+.header h1 { width: 100%; }
+
 h2 {
   font-size: 26px;
   border-bottom: 2px solid #333;
